--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,40 @@
-# Created by .ignore support plugin (hsz.mobi)
-### Maven template
+# maven ignore
 target/
-pom.xml.tag
-pom.xml.releaseBackup
-pom.xml.versionsBackup
-pom.xml.next
-release.properties
-dependency-reduced-pom.xml
-buildNumber.properties
-.mvn/timing.properties
+*.jar
+*.war
+*.zip
+*.tar
+*.tar.gz
 
-# Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
-!/.mvn/wrapper/maven-wrapper.jar
+#gradle ignore
+.gradle/
+gradle/
+gradlew*
+build/
 
+# eclipse ignore
+.settings/
+.project
+.classpath
+
+# idea ignore
+.idea/
+*.ipr
+*.iml
+*.iws
+
+# temp ignore
+*.log
+*.cache
+*.diff
+*.patch
+*.tmp
+*.java~
+*.properties~
+*.xml~
+/logs/
+/dubbo/
+
+# system ignore
+.DS_Store
+Thumbs.db
